--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="ggorlen.github.io" />
+    <meta name="description" content="Qualified Quiz Importer" />
     <meta name="color-scheme" content="dark light" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Qualified Quiz Importer</title>
@@ -17,6 +17,7 @@
         margin: auto;
         line-height: 1.75;
         max-width: 70ch;
+        padding: 1em;
       }
 
       pre {
@@ -71,7 +72,7 @@
       <p>
         This tool imports unstructured input to a Qualified quiz. It uses OpenAI
         to convert the input to Qualified's quiz format, so inaccuracies can
-        occur. Be sure to check the results.
+        occur. Be sure to check the results and use at your own risk.
       </p>
       <form>
         <textarea name="quiz">
@@ -98,15 +99,12 @@ Correct Answer: c) To pass data from parent to child components</textarea
               ><a
                 target="_blank"
                 href="https://help.openai.com/en/articles/4936850-where-do-i-find-my-openai-api-key"
+                tabindex="-1"
                 >(?)</a
               ></sup
             >
           </label>
-          <input
-            name="openai-key"
-            id="openai-key"
-            required
-          />
+          <input name="openai-key" id="openai-key" required />
         </div>
         <div class="form-group">
           <label for="qualified-key">
@@ -115,15 +113,12 @@ Correct Answer: c) To pass data from parent to child components</textarea
               ><a
                 target="_blank"
                 href="https://docs.qualified.io/integrations/custom-integrations/api/#generating-an-api-key"
+                tabindex="-1"
                 >(?)</a
               ></sup
             >
           </label>
-          <input
-            name="qualified-key"
-            id="qualified-key"
-            required
-          />
+          <input name="qualified-key" id="qualified-key" required />
         </div>
         <!--
         <div class="form-group">
@@ -137,12 +132,49 @@ Correct Answer: c) To pass data from parent to child components</textarea
       </form>
       <small class="status"></small>
       <div>
-        <pre class="prettyprint lang-js"><code>{}</code></pre>
+        <pre class="prettyprint lang-js"><code></code></pre>
       </div>
     </main>
     <script>
+      const url = new URL(window.location.href);
+      const params = ["quiz", "qualified-key", "openai-key"];
+
+      for (const param of params) {
+        const val = url.searchParams.get(param);
+
+        if (val) {
+          document.querySelector(`[name="${param}"]`).value = val;
+        }
+      }
+
+      const darkJSON = {
+        keyColor: "rgb(156, 220, 254)",
+        stringColor: "rgb(214, 157, 133)",
+        numberColor: "rgb(184, 215, 163)",
+        nullColor: "rgb(86, 156, 214)",
+        trueColor: "rgb(86, 156, 214)",
+        falseColor: "rgb(86, 156, 214)",
+      };
+      const lightJSON = {
+        keyColor: "rgb(84, 84, 84)",
+        stringColor: "rgb(0, 128, 0)",
+        trueColor: "rgb(170, 93, 0)",
+        falseColor: "rgb(170, 93, 0)",
+        numberColor: "rgb(170, 93, 0)",
+      };
+      const darkMode = window.matchMedia("(prefers-color-scheme: dark)");
+      darkMode.addEventListener("change", (e) => {
+        const pre = document.querySelector("pre");
+        const highlighted = jsonFormatHighlight(
+          pre.textContent,
+          darkMode.matches ? darkJSON : lightJSON,
+        );
+        pre.innerHTML = highlighted;
+      });
+
       const status = document.querySelector(".status");
       const submitBtn = document.querySelector("[type='submit']");
+
       document
         .querySelector("form")
         .addEventListener("submit", async (event) => {
@@ -157,16 +189,21 @@ Correct Answer: c) To pass data from parent to child components</textarea
           try {
             const parsedQuiz = await parseQuizWithOpenAI(quiz, openAIKey);
             const indented = JSON.stringify(parsedQuiz, null, 2);
-            const highlighted = jsonFormatHighlight(indented, {
-              keyColor: "#89d",
-            });
+            const highlighted = jsonFormatHighlight(
+              indented,
+              darkMode.matches ? darkJSON : lightJSON,
+            );
             document.querySelector("pre").innerHTML = highlighted;
             status.textContent = "Uploading to Qualified...";
             const quizDetails = await postQuizToQualified(
               parsedQuiz,
               qualifiedKey,
             );
-            status.innerHTML = `<a href="https://www.qualified.io/hire/challenges/${quizDetails.id}" target="blank">Quiz</a> successfully created!`;
+            status.innerHTML = `
+              <a
+                href="https://www.qualified.io/hire/challenges/${quizDetails.id}"
+                target="blank"
+              >${quizDetails.title}</a> successfully created!`;
           } catch (err) {
             status.textContent = `Error: ${err.message}`;
           } finally {
