--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ ${quiz}
             Authorization: `Bearer ${openAIKey}`,
           },
           body: JSON.stringify({
-            model: "gpt-4-turbo",
+            model: "gpt-4o",
             messages: [{ role: "user", content }],
             temperature: 0,
             stream: true,
